fix: reset password body alignment

--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -60,7 +60,7 @@ $login-padding-bottom: 24px;
 
   &__inner-content-wrapper {
     &--is-logging-in {
-      margin: auto;
+      margin: auto 0;
     }
   }
 
